Bug Fixed, View: fixed and changed Tooltip (tooltip does not stuck on screen anymore) Issue: #330

--- a/src/main/java/upandgo/client/resources/CourseListCellStyle.css
+++ b/src/main/java/upandgo/client/resources/CourseListCellStyle.css
@@ -17,8 +17,10 @@
 }
 
 .cell-button{
-	display: none;
+	display: inline;
 	font-size:10px; 
 	float:left; 
 	padding: 1px 3px;
+	visibility: hidden;
+	transition: visibility;
 }
