--- a/src/main/java/upandgo/client/resources/CourseListStyle.css
+++ b/src/main/java/upandgo/client/resources/CourseListStyle.css
@@ -4,7 +4,8 @@
 
 
 .courseSelectionRow:hover .cell-button{
-	display: inline;
+	transition-delay:0.15s;
+	visibility: visible;
 	
 }
 .ChosenCourses{
